login/logout user route logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,12 @@ https://cdn.jsdelivr.net/npm/bootswatch@5.2.3/dist/slate/bootstrap.min.css
           <a href="/" class="navbar-brand text-light">Flask Feedback</a>
           <ul class="nav navbar-nav flex-row float-right">
             {% if session['user_id'] %}
-            <li class="nav-item">
-              <a class="nav-link pr-3 text-light" href="/logout">Logout</a>
-            </li>
+            <form action="/logout" method="POST">
+              <li class="nav-item">
+                <a class="nav-link pr-3 text-light" href="/">Logout</a>
+              </li>
+            </form>
+            
             {% else %}
             <li class="nav-item">
               <a class="nav-link pr-3 text-light" href="/login">Login</a>
