--- a/templates/secret.html
+++ b/templates/secret.html
@@ -1,4 +1,15 @@
 {% extends 'base.html' %} {% block title %}Secret Page{% endblock %} {% block
 content %}
-<h1>You made it!</h1>
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">{{user.username}}'s Info</h4>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      Full Name: {{user.first_name}} {{user.last_name}}
+    </li>
+    <li class="list-group-item">Email Adress: {{ user.email }}</li>
+  </ul>
+</div>
+
 {% endblock %}
