--- a/templates/secret.html
+++ b/templates/secret.html
@@ -11,5 +11,16 @@ content %}
     <li class="list-group-item">Email Adress: {{ user.email }}</li>
   </ul>
 </div>
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title">{{user.username}}'s Feedback</h4>
+  </div>
+  <ul class="list-group list-group-flush">
+    {% for feedback in all_feedback %}
+    <li class="list-group-item">{{ feedback.title }}</li>
+    <li class="list-group-item">{{ feedback.content }}</li>
+    {% endfor %}
+  </ul>
+</div>
 
 {% endblock %}
