feedback_form.html

--- a/templates/secret.html
+++ b/templates/secret.html
@@ -8,7 +8,7 @@ content %}
     <li class="list-group-item">
       Full Name: {{user.first_name}} {{user.last_name}}
     </li>
-    <li class="list-group-item">Email Adress: {{ user.email }}</li>
+    <li class="list-group-item">Email Address: {{ user.email }}</li>
   </ul>
 </div>
 <div class="card">
@@ -22,5 +22,7 @@ content %}
     {% endfor %}
   </ul>
 </div>
-
+<a href="/users/{{user.username}}/feedback/add" class="btn btn-info"
+  >Add Feedback</a
+>
 {% endblock %}
