feedback submit working

--- a/templates/secret.html
+++ b/templates/secret.html
@@ -17,7 +17,7 @@ content %}
   </div>
   <ul class="list-group list-group-flush">
     {% for feedback in all_feedback %}
-    <li class="list-group-item">{{ feedback.title }}</li>
+    <li class="list-group-item fw-bold">{{ feedback.title }}</li>
     <li class="list-group-item">{{ feedback.content }}</li>
     {% endfor %}
   </ul>
