--- a/templates/feedback_form.html
+++ b/templates/feedback_form.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %} {% block title %}Feedback Page{% endblock %} {% block
-  content %}
-  <h1>Give Us Your Feeback</h1>
-  <form method="POST">
-    {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
-    'hidden' %}
-    <p>
-      {{ field.label }} {{ field(class_="form-control") }} {% for error in
-      field.errors %}
-      <span class="form-text text-danger">{{ error }}</span>
-      {% endfor %}
-    </p>
+content %}
+<h1>Give Us Your Feedback</h1>
+<form method="POST">
+  {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
+  'hidden' %}
+  <p>
+    {{ field.label }} {{ field(class_="form-control") }} {% for error in
+    field.errors %}
+    <span class="form-text text-danger">{{ error }}</span>
     {% endfor %}
-  
-    <button class="btn btn-success" type="submit">Submit</button>
-  </form>
-  {% endblock %}
+  </p>
+  {% endfor %}
+
+  <button class="btn btn-success" type="submit">Submit</button>
+</form>
+{% endblock %}
