--- a/templates/secret.html
+++ b/templates/secret.html
@@ -10,16 +10,31 @@ content %}
     </li>
     <li class="list-group-item">Email Address: {{ user.email }}</li>
   </ul>
+  <form action="{{user.username}}/delete" method="POST">
+    <button class="btn btn-sm btn-danger">
+      Delete User
+      <i class="fas fa-trash"></i>
+    </button>
+  </form>
 </div>
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title">{{user.username}}'s Feedback</h4>
+    <h4 class="card-title">All Feedback</h4>
   </div>
   <ul class="list-group list-group-flush">
-    {% for feedback in all_feedback %}
+    {% for feedback in all_feedback %} {% if session['username'] ==
+    feedback.username %}
     <li class="list-group-item fw-bold">{{ feedback.title }}</li>
-    <li class="list-group-item">{{ feedback.content }}</li>
-    {% endfor %}
+    <li class="list-group-item">
+      {{ feedback.content }}
+      <form action="/feedback/{{feedback.id}}/delete" method="POST">
+        <button class="btn btn-sm btn-danger">
+          <i class="fas fa-trash"></i>
+        </button>
+      </form>
+    </li>
+
+    {% endif %} {% endfor %}
   </ul>
 </div>
 <a href="/users/{{user.username}}/feedback/add" class="btn btn-info"
